--- a/Models/Interior/Panel/indicate-panel/indicate-panel2.ac
+++ b/Models/Interior/Panel/indicate-panel/indicate-panel2.ac
@@ -2,7 +2,7 @@ AC3Db
 MATERIAL "DefaultWhite" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0.5 0.5 0.5  shi 64  trans 0
 MATERIAL "DefaultWhite.001" rgb 1 1 1 amb 1 1 1 emis 0 0 0 spec 0.5 0.5 0.5 shi 64 trans 0
 OBJECT world
-kids 16
+kids 17
 OBJECT poly
 name "AFS_ALT"
 data 8
@@ -212,6 +212,27 @@ refs 4
 0 1.00148785114 0.462415188551
 1 1.00148952007 0.498595565557
 3 0.797410607338 0.498595565557
+kids 0
+OBJECT poly
+name "SPBK-AUTO"
+data 8
+Cube.009
+texture "indicate-panel.rgb"
+texrep 1 1
+crease 30.000000
+numvert 4
+0.014736 -0.01515 0.049097
+0.014736 -0.003925 0.049097
+0.014736 -0.01515 0.08133
+0.014736 -0.003925 0.08133
+numsurf 1
+SURF 0x00
+mat 1
+refs 4
+2 0.62929558754 0.0335422307253
+0 0.792629361153 0.0335422307253
+1 0.792629361153 0.0756475701928
+3 0.62929558754 0.0756475701928
 kids 0
 OBJECT poly
 name "SPD_BRAKE"
